Working calc without C, % and +/-

--- a/First_iOS_App/Base.lproj/Main.storyboard
+++ b/First_iOS_App/Base.lproj/Main.storyboard
@@ -214,7 +214,7 @@
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
-                                    <action selector="operations:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Ns-1B-mIB"/>
+                                    <action selector="operations:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PvV-W4-wrN"/>
                                 </connections>
                             </button>
                         </subviews>
